--- a/src/components/login-container.module.scss
+++ b/src/components/login-container.module.scss
@@ -1,19 +1,24 @@
+@import "src/styles/variables/colors";
+@import "src/styles/variables/typography";
+
 .loginContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 377px;
-    width: 433px;
-    border: 2px solid red;
-    max-width: 433px;
-    max-height: 300px;
-    margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 377px;
+  width: 433px;
+  max-width: 433px;
+  max-height: 300px;
+  margin: 20px;
+  color: $light;
 }
 
 .title {
-    font-size: 48px;
+  font-size: 48px;
+  font-weight: $font-bold;
 }
 
 .description {
-    font-size: 18px;
+  font-size: 18px;
+  font-weight: $font-bold;
 }
