--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,2 +1,5 @@
 $font-main: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
   "Helvetica Neue", sans-serif;
+$font-bold: 700;
+$font-light: 400;
+$font-family-main: "PT Sans", sans-serif;
